--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "227cf926",
+   "id": "fef1a9ea",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d7dcb8ec",
+   "id": "59f86166",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3699fc49",
+   "id": "aa8acb33",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "088d1012",
+   "id": "17410ee2",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "57e6baf8",
+   "id": "fb53a4f5",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6c2191f",
+   "id": "8828cd50",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8cff345e",
+   "id": "0af2d91c",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "131930c8",
+   "id": "85d533e1",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6655c2d9",
+   "id": "effe3d3e",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4ce85577",
+   "id": "443e9b45",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ba4f945f",
+   "id": "5e05b132",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4330cf54",
+   "id": "9c4e2634",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0eb7b1b9",
+   "id": "90e3971d",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "73896060",
+   "id": "6c54f6ec",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "48b05b4d",
+   "id": "793cfd49",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5c80e33d",
+   "id": "8ef293c8",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3ea6c086",
+   "id": "13464831",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fa05ac44",
+   "id": "5ccb02cb",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c867150a",
+   "id": "e71114bf",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "6cda6e96",
+   "id": "0085cb21",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "420942b4",
+   "id": "908fb957",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "b87ad0b6",
+   "id": "08658714",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "6d2cb590",
+   "id": "6c2672fe",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "17068071",
+   "id": "aea30915",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "60b187e8",
+   "id": "277c0450",
    "metadata": {},
    "outputs": [
     {
@@ -555,8 +555,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "id": "11505d35",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (1235148347.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[96], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    print (x, y, \"=\" x+y)\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
+   "source": [
+    "X= input('Put in 1 number: ')\n",
+    "Y= input('Put in a 2nd number: ')\n",
+    "if x.isdigit(true):\n",
+    "    print (x, y, \"=\" x+y)\n",
+    "else:\n",
+    "    print('Bad input')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "09b43506",
+   "id": "0a12fe4b",
    "metadata": {},
    "outputs": [],
    "source": []
