--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "16350bcf",
+   "id": "a651a0a3",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "1c8bc4e1",
+   "id": "ccd373ba",
    "metadata": {},
    "outputs": [
     {
@@ -238,10 +238,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7d7f717",
+   "id": "591a3065",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "number1 = input (' Enter first number: ')\n",
+    "number2 = input (' Enter second number: ')\n",
+    "if number1.isdigit()"
+   ]
   }
  ],
  "metadata": {
