--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "681a3eca",
+   "id": "a7f47bef",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fcf04c50",
+   "id": "f829e976",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f6b10c6c",
+   "id": "659ddc0e",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8cbde211",
+   "id": "4e0035ec",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "66e54d57",
+   "id": "5de5ff00",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "92191cfb",
+   "id": "a413949c",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "52c9ba0d",
+   "id": "b0d8cf77",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "07ffa173",
+   "id": "83ff72bb",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4bc5cf43",
+   "id": "4bc042eb",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "cd8a4079",
+   "id": "3466175c",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ec7fc505",
+   "id": "76d6f567",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "af15a407",
+   "id": "7db94177",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "dfbfbd82",
+   "id": "fe590413",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "7927c144",
+   "id": "3116f827",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "160e8c71",
+   "id": "31ed03f4",
    "metadata": {},
    "outputs": [
     {
@@ -365,11 +365,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b214266",
+   "id": "25ef9aff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "first=ip"
+    "first=input(\"Please write the first number: \")\n",
+    "second=input(\"Please write the second number: \")\n",
+    "\n",
+    "if first.isdigit and second.isdigit:\n",
+    "    print(first.digit + second.digit)\n",
+    "else"
    ]
   }
  ],
