--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1826674d",
+   "id": "92aec521",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "da4096ee",
+   "id": "cf9686d4",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8516bf52",
+   "id": "a38b5704",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b33d1050",
+   "id": "aa67d16e",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b9d2a6e2",
+   "id": "ccac7616",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "93b5a4f5",
+   "id": "b9bdc997",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "894b810c",
+   "id": "645079a4",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "36f6710d",
+   "id": "9708bb15",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "7a92409d",
+   "id": "18aa06e1",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "9ed18135",
+   "id": "64dc4b0d",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "770679f1",
+   "id": "22913a57",
    "metadata": {},
    "outputs": [
     {
@@ -330,13 +330,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8b22bbf",
+   "id": "1493f65a",
    "metadata": {},
    "outputs": [],
    "source": [
     "n1=input('Please enter first number')\n",
     "n2=input('please enter second number')\n",
-    "if n1"
+    "if n1.isdigit() and n2.isdigit():\n",
+    "    print(f'The sum is {n1 + n2}')\n",
+    "else:\n",
+    "    "
    ]
   }
  ],
