--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a0930e25",
+   "id": "ee15585a",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "39f48698",
+   "id": "d0483647",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b129548e",
+   "id": "9cffe6af",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7bd10d8",
+   "id": "d7ed9f82",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "49a98683",
+   "id": "3f69fcb3",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bd1be3d8",
+   "id": "eef1196a",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8e7767ba",
+   "id": "1110c0c9",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "aad3f733",
+   "id": "d4e709bf",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "da614d7f",
+   "id": "7f6e5a7a",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3bcba3d1",
+   "id": "0586ba56",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "24ce4540",
+   "id": "867dab57",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3840526f",
+   "id": "13b5ed2b",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e959978a",
+   "id": "23b70b47",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "6748b5ae",
+   "id": "6412258c",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "6204f00a",
+   "id": "0d03649c",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "b961e618",
+   "id": "8324828c",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "a35a8ebe",
+   "id": "5e84a6cb",
    "metadata": {},
    "outputs": [
     {
@@ -386,16 +386,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a9dcdb9d",
+   "execution_count": 103,
+   "id": "0e786e4b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first number1\n",
+      "Enter second number2\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "n1 = input('Enter first number')\n",
     "n2 = input('Enter second number')\n",
     "\n",
-    "if "
+    "if n1.isdigit() and n2.isdigit():\n",
+    "    print(n1+n2)\n",
+    "else:\n",
+    "    print('Bad input.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fde5d776",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
