--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "236b8aa4",
+   "id": "f5e487f7",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3b5e5238",
+   "id": "7ef17746",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "37bcb3e4",
+   "id": "f591e5e9",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f54c8dd8",
+   "id": "c6cacc4e",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ff8b6415",
+   "id": "58c39844",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7c8eb56d",
+   "id": "bef1f97d",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "81740d40",
+   "id": "f478fccd",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3ec90bd5",
+   "id": "570f23a4",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13aa05c7",
+   "id": "71cc735f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6b6d279",
+   "id": "46f41509",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "8b31894e",
+   "id": "ae63e13b",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "301ef475",
+   "id": "5073b891",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "ae3c0133",
+   "id": "14e70a10",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "4f53274a",
+   "id": "8e04d42b",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11f1402e",
+   "id": "363ffadd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "75104a3d",
+   "id": "84f0320e",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "a3c05eea",
+   "id": "77c20153",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "634e1157",
+   "id": "06863a47",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "0b5ff58d",
+   "id": "ea6a72b7",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "3210480e",
+   "id": "b4c3c6f6",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "78327787",
+   "id": "282396cd",
    "metadata": {},
    "outputs": [
     {
@@ -440,20 +440,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b4a8274f",
+   "execution_count": 163,
+   "id": "75535759",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number 1:10\n",
+      "Enter number 2:50\n",
+      "60\n"
+     ]
+    }
+   ],
    "source": [
     "number1 = input(\"Enter number 1: \".strip())\n",
     "number2 = input(\"Enter number 2: \".strip())\n",
-    "print(number1 + number2)"
+    "\n",
+    "if number1.isdigit() and number2.isdigit():\n",
+    "    print(int(number1) + int(number2))\n",
+    "else:\n",
+    "    print(\"One of the entries is not a number\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8305d8e",
+   "id": "825013ff",
    "metadata": {},
    "outputs": [],
    "source": []
