--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6bcc12df",
+   "id": "ed4b093e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "492688b0",
+   "id": "84cd0e2b",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b2b60537",
+   "id": "e6c73f96",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "498ab4ac",
+   "id": "41b1bfa3",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "71f39e1e",
+   "id": "1c1753ce",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fbd2b63f",
+   "id": "21841311",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7c9b6bca",
+   "id": "4f354f3a",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "165c0c02",
+   "id": "cfc190c0",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "7a353824",
+   "id": "966ba853",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "18e3ce98",
+   "id": "2b54e0cf",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "ca1d1f03",
+   "id": "c3bb6420",
    "metadata": {},
    "outputs": [
     {
@@ -253,13 +253,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "868fe7e7",
+   "id": "e36b8147",
    "metadata": {},
    "outputs": [],
    "source": [
-    "t1 = input('please input number 1 : ').stripe()\n",
-    "t2 = input('please input number 2 : ').stripe()\n",
-    "i"
+    "t1 = input('please enter number 1 : ').stripe()\n",
+    "t2 = input('please enter number 2 : ').stripe()\n",
+    "if not t1.isdigit() :\n",
+    "    print(f'{t1} is not a number !!!')\n",
+    "elif not t2.isdigit() :\n",
+    "    print(f'{t2} is not a number !!!')\n",
+    "else\n",
+    "    pront(f')"
    ]
   }
  ],
