--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "c6987ce4",
+   "id": "6bfa3c68",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "1489c391",
+   "id": "bddd1aa3",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "9da1bd0e",
+   "id": "ffdd1f3a",
    "metadata": {},
    "outputs": [
     {
@@ -229,10 +229,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "861368ef",
+   "id": "82caf7a1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Adding numbers\n",
+    "num1 = input('please, enter some number: ')\n",
+    "num2 = input('please, enter some number: ')\n",
+    "\n",
+    "if num1.isdigit():\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
