--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fef1a9ea",
+   "id": "ad631694",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "59f86166",
+   "id": "4d6a0775",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aa8acb33",
+   "id": "3c44c660",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "17410ee2",
+   "id": "5eb349f0",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fb53a4f5",
+   "id": "680d7d10",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8828cd50",
+   "id": "e8ca0408",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0af2d91c",
+   "id": "2c912416",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "85d533e1",
+   "id": "a9341398",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "effe3d3e",
+   "id": "a3095e79",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "443e9b45",
+   "id": "c28db038",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5e05b132",
+   "id": "d93f39d0",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9c4e2634",
+   "id": "a3231221",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "90e3971d",
+   "id": "3749b144",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6c54f6ec",
+   "id": "7188156a",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "793cfd49",
+   "id": "38e1e764",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8ef293c8",
+   "id": "08710b14",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "13464831",
+   "id": "c2659cb9",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "5ccb02cb",
+   "id": "62c38935",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e71114bf",
+   "id": "3d48f09b",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "0085cb21",
+   "id": "4b83dbea",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "908fb957",
+   "id": "6da9f35d",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "08658714",
+   "id": "e49b80bf",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "6c2672fe",
+   "id": "0cad4e4b",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "aea30915",
+   "id": "9e9405dc",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "277c0450",
+   "id": "11139812",
    "metadata": {},
    "outputs": [
     {
@@ -555,24 +555,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "11505d35",
+   "execution_count": 101,
+   "id": "5cc7dac5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (1235148347.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[96], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    print (x, y, \"=\" x+y)\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Put in 1 number: 1\n",
+      "Put in a 2nd number: 2\n",
+      "1 2 = 12\n"
      ]
     }
    ],
    "source": [
-    "X= input('Put in 1 number: ')\n",
-    "Y= input('Put in a 2nd number: ')\n",
-    "if x.isdigit(true):\n",
-    "    print (x, y, \"=\" x+y)\n",
+    "x= input('Put in 1 number: ')\n",
+    "y= input('Put in a 2nd number: ')\n",
+    "if x.isdigit and y.isdigit:\n",
+    "    print (x , y, \"=\", (x+y))\n",
     "else:\n",
     "    print('Bad input')\n"
    ]
@@ -580,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a12fe4b",
+   "id": "31f8cf3f",
    "metadata": {},
    "outputs": [],
    "source": []
