--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "a651a0a3",
+   "id": "cc0be1b3",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "ccd373ba",
+   "id": "1adf357b",
    "metadata": {},
    "outputs": [
     {
@@ -237,15 +237,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "591a3065",
+   "execution_count": 66,
+   "id": "4ced4cf1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Enter first number: 123\n",
+      " Enter second number: 4\n",
+      "1234\n"
+     ]
+    }
+   ],
    "source": [
     "number1 = input (' Enter first number: ')\n",
     "number2 = input (' Enter second number: ')\n",
-    "if number1.isdigit()"
+    "if number1.isdigit() and number2.isdigit():\n",
+    "    print (number1 + number2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48bd8148",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
