--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92aec521",
+   "id": "ef4cb13b",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cf9686d4",
+   "id": "e6a31fcd",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a38b5704",
+   "id": "7e1da9c8",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "aa67d16e",
+   "id": "cd377173",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ccac7616",
+   "id": "4e09e2fa",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "b9bdc997",
+   "id": "e6ea1d08",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "645079a4",
+   "id": "41607e3f",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "9708bb15",
+   "id": "f36da08b",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "18aa06e1",
+   "id": "19056ed5",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "64dc4b0d",
+   "id": "b57b1587",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "22913a57",
+   "id": "8284457a",
    "metadata": {},
    "outputs": [
     {
@@ -329,18 +329,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1493f65a",
+   "execution_count": 89,
+   "id": "1b152325",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'if' statement on line 6 (2206701307.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[89], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'if' statement on line 6\n"
+     ]
+    }
+   ],
    "source": [
     "n1=input('Please enter first number')\n",
     "n2=input('please enter second number')\n",
     "if n1.isdigit() and n2.isdigit():\n",
-    "    print(f'The sum is {n1 + n2}')\n",
+    "    print(f'The sum is {int(n1 + n2}')\n",
     "else:\n",
-    "    "
+    "    if n1.isdigit():\n",
+    "        print(f'{n2} is not a number!')\n",
+    "    else:\n",
+    "        print(f'{n1} is not a number!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c8c6b02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
