--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ee15585a",
+   "id": "fc4e5944",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d0483647",
+   "id": "7dcb3fd4",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cffe6af",
+   "id": "1e1a0f60",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7ed9f82",
+   "id": "0550021b",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3f69fcb3",
+   "id": "60eb74e2",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eef1196a",
+   "id": "6463633e",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1110c0c9",
+   "id": "f18f9d85",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d4e709bf",
+   "id": "88ef1fbc",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7f6e5a7a",
+   "id": "919424ea",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0586ba56",
+   "id": "ffebfa04",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "867dab57",
+   "id": "c6093d8f",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "13b5ed2b",
+   "id": "b2d3b787",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "23b70b47",
+   "id": "3744af2a",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "6412258c",
+   "id": "2db3ec9e",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "0d03649c",
+   "id": "ad9a5558",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "8324828c",
+   "id": "f8d71365",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "5e84a6cb",
+   "id": "02b94f02",
    "metadata": {},
    "outputs": [
     {
@@ -386,26 +386,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "0e786e4b",
+   "execution_count": 108,
+   "id": "79c3d7c3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first number1\n",
-      "Enter second number2\n",
-      "12\n"
+      "Enter first number: 4\n",
+      "Enter second number: 5\n",
+      "9\n"
      ]
     }
    ],
    "source": [
-    "n1 = input('Enter first number')\n",
-    "n2 = input('Enter second number')\n",
+    "n1 = input('Enter first number: ')\n",
+    "n2 = input('Enter second number: ')\n",
     "\n",
     "if n1.isdigit() and n2.isdigit():\n",
-    "    print(n1+n2)\n",
+    "    print(int(n1)+int(n2))\n",
     "else:\n",
     "    print('Bad input.')"
    ]
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fde5d776",
+   "id": "f8983fa3",
    "metadata": {},
    "outputs": [],
    "source": []
